[package]
name = "trawm"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"]}
embassy-sync = { version = "0.6.0", features = ["defmt"]}
embassy-executor = { version = "0.6.2", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers", "defmt"] }
embassy-time = { version = "0.3.2", features = ["defmt"]}
embassy-rp = { version = "0.2.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040", "defmt"] }
embassy-futures = { version = "0.1.1"}
cyw43 = { version = "0.2.0", features = ["firmware-logs", "bluetooth", "defmt"] }
cyw43-pio = { version = "0.2.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.2"
panic-probe = { version = "0.3", features = ["print-defmt"]}
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
uc8151 = { version = "0.3.0", git = "https://github.com/9names/uc8151-rs.git", rev = "37a7feee23716506b777bd4032327038e7e0786a" }
embedded-text = "0.7.0"
tinybmp = "0.5.0"
st7789 = "0.6.1"
display-interface = "0.4.1"
smart-leds = "0.3.0"
heapless = "0.8"
embedded-hal-bus = { version = "0.1", features = ["async"] }

static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

bt-hci = { version = "0.1.1", default-features = false, features = ["defmt"] }
trouble-host = { version = "0.1.0", features = ["gatt", "peripheral", "central", "scan", "defmt"] }

pcf85063a = { version = "0.1.1", features = ["defmt"] }
time = { version = "0.3.17", default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[patch.crates-io]
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "9840438d75f0bfcc0cf950f5d1b267e86736b7b3" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "dc9fc73704b5fc18e9f34a2fc94c06bbe691732a" }
bt-hci = { git = "https://github.com/embassy-rs/bt-hci.git", rev = "218acc89ceb7b0fa4d8a92bed756cbf7d55b9566" }
